fixed spacing between text

--- a/res/about.css
+++ b/res/about.css
@@ -183,7 +183,7 @@ body {
         font-family: "JetBrains Mono", monospace;
     }
     #section1 .right-section p {
-        font-size: 1.3em;
+        font-size: 1.2em;
     }
     #section1 .social-button {
         text-align: center;
