--- a/res/styles.css
+++ b/res/styles.css
@@ -63,7 +63,7 @@ body {
     .summary h2 {
         font-size: 4em;
         margin-bottom: 0.5em;
-        line-height: 1em;
+        line-height: 1.1em;
     }
     .summary p {
         font-size: 2em;
