--- a/res/work.css
+++ b/res/work.css
@@ -401,7 +401,7 @@ body {
     }
     #section2 h2 {
         font-size: 1.6em;
-        padding-left: 1.1em;
+        padding-left: 1.2em;
     }
     #section2 h3 {
         font-size: 1.2em;
